--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ html {
 body {
   position: relative;
   display: grid;
+  overflow-x: hidden;
   place-items: center;
   width: 100vw;
   background-color: #0E0A02;
@@ -114,6 +115,30 @@ img {
   margin-bottom: 132px;
 }
 
+.faixa {
+  position: relative;
+  width: 100%;
+  background: linear-gradient(90deg, #F8B838 0%, #DF9500 100%);
+  overflow-x: hidden;
+  padding: 8px 0;
+}
+.faixa .slider {
+  justify-content: center;
+  gap: 32px;
+  animation: faixaSlider 32s ease-in-out infinite;
+  text-transform: uppercase;
+}
+.faixa .slider h3:nth-child(even) {
+  color: #F3F3F3;
+}
+.faixa .slider h3:nth-child(odd) {
+  display: block;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  text-align: center;
+  color: #160F20;
+}
+
 .CTA-button {
   display: inline-flex;
   align-items: center;
@@ -147,12 +172,45 @@ img {
   transition-delay: 0.15s;
 }
 
+.CTA-button-purple {
+  background: linear-gradient(90deg, #8239E0 0%, #5416A4 100%);
+  display: inline-flex;
+  align-items: center;
+  width: auto;
+  transition: box-shadow 0.8s;
+  transition-delay: 0.1s;
+  font-family: "Montserrat";
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  padding: 16px 32px;
+  border-radius: 8px;
+  color: #F3F3F3;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
+}
+.CTA-button-purple svg {
+  margin-left: 22px;
+  transition: 0.5s;
+}
+.CTA-button-purple:hover {
+  box-shadow: 0 20px 32px rgba(129, 57, 224, 0.4235294118);
+}
+.CTA-button-purple:hover svg:first-child {
+  transform: translateX(6px);
+}
+.CTA-button-purple:hover svg:last-child {
+  transform: translateX(8px);
+  transition-delay: 0.15s;
+}
+
 .header {
   margin-bottom: 112px;
   width: 100%;
   padding: 10px 0;
-  background: rgba(22, 15, 32, 0.3490196078);
-  border-bottom: 2px solid #160F20;
+  background: rgba(22, 19, 9, 0.2274509804);
+  border-bottom: 2px solid rgba(45, 36, 12, 0.4039215686);
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
@@ -160,10 +218,42 @@ img {
   margin-right: 16px;
 }
 .header p {
-  color: #9180A6;
+  color: #A69C80;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 3px;
+}
+
+.mid_page {
+  position: relative;
+  background-color: #F3F3F3;
+  color: #0E0A02;
+  z-index: 10;
+  margin-bottom: 80px;
+  padding-top: 80px;
+  width: 100%;
+}
+.mid_page p {
+  color: #160F20;
+}
+.mid_page .detail {
+  display: block;
+  position: absolute;
+  width: 120%;
+  height: 500px;
+  background-color: #F3F3F3;
+  top: -100px;
+  left: 0;
+  z-index: -1;
+  transform: rotate(-5deg);
+  transform-origin: center;
+}
+
+.headline_container {
+  background-image: url(../img/bg_course.webp);
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #headline {
@@ -188,6 +278,8 @@ img {
   margin-top: 80px;
   overflow: hidden;
   border-radius: 24px;
+  z-index: 40;
+  cursor: pointer;
 }
 
 #about_course .container {
@@ -237,6 +329,7 @@ img {
 }
 #course_modules .container h2 {
   text-align: center;
+  margin-bottom: 40px;
 }
 #course_modules .container .modules-container {
   width: 100%;
@@ -415,6 +508,74 @@ img {
   color: #C7B9D9;
 }
 
+.bg_price_course {
+  background-image: url(../img/bg_course.webp);
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#buysection {
+  margin-top: 120px;
+}
+#buysection .container {
+  justify-content: space-between;
+}
+#buysection .container .logo {
+  width: 100%;
+  max-width: 500px;
+  position: relative;
+}
+#buysection .container .logo svg {
+  width: 100%;
+}
+#buysection .container .logo svg #words {
+  transform-origin: center;
+  animation: rotateWords 16s linear infinite;
+}
+#buysection .container .price-card {
+  width: 100%;
+  max-width: 400px;
+  padding: 56px 32px;
+  background: rgba(30, 22, 6, 0.4431372549);
+  border: 2px solid #261C08;
+  border-radius: 16px;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  text-align: center;
+}
+#buysection .container .price-card span:first-child {
+  gap: 8px;
+  margin-bottom: 24px;
+}
+#buysection .container .price-card h3 {
+  margin-bottom: 32px;
+}
+#buysection .container .price-card .price {
+  margin: 8px;
+  align-items: flex-end;
+}
+#buysection .container .price-card .price h1:nth-child(1) {
+  font-family: "Montserrat";
+  font-weight: bold;
+}
+#buysection .container .price-card .price h1:nth-child(2) {
+  font-size: 64px;
+  line-height: 90%;
+  margin-left: 8px;
+}
+#buysection .container .price-card .CTA-button {
+  margin: 40px 0 16px;
+}
+#buysection .container .price-card span:last-child {
+  display: block;
+  font-size: 12px;
+  text-transform: capitalize;
+  max-width: 250px;
+  margin: 0 auto;
+  color: #7D7D7D;
+}
+
 #faq .container {
   flex-direction: column;
 }
@@ -478,6 +639,32 @@ img {
   transform: rotateZ(-45deg);
 }
 
+#other_courses {
+  background-color: #F3F3F3;
+  padding: 80px 0;
+  color: #160F20;
+}
+#other_courses .container {
+  flex-wrap: wrap-reverse;
+  gap: 50px;
+}
+#other_courses .container .image {
+  max-width: 450px;
+  width: 100%;
+}
+#other_courses .container .content {
+  max-width: 560px;
+  width: 100%;
+}
+#other_courses .container .content h2 {
+  line-height: 120%;
+}
+#other_courses .container .content p {
+  margin: 16px 0 24px;
+  font-size: 20px;
+  color: #160F20;
+}
+
 .copy {
   margin: 16px 0;
   color: #332A41;
@@ -500,6 +687,13 @@ img {
   #aboutme .container .about-text {
     max-width: 550px;
     width: 100%;
+  }
+  #other_courses .container {
+    text-align: center;
+  }
+  #buysection .container {
+    flex-direction: column;
+    gap: 120px;
   }
 }
 @media screen and (max-width: 516px) {
