--- a/css/style.scss
+++ b/css/style.scss
@@ -38,6 +38,7 @@ html{
 body{
     position: relative;
     display: grid;
+    overflow-x: hidden;
 
     place-items: center;
     width: 100vw;
@@ -123,6 +124,32 @@ img{
     margin-bottom: 132px;
 }
 
+.faixa{
+    position: relative;
+    width: 100%;
+    background: $gradient-yellow;
+    overflow-x: hidden;
+
+    .slider{
+        justify-content: center;
+        gap: 32px;
+        animation: faixaSlider 32s ease-in-out infinite;
+        text-transform: uppercase;
+        h3:nth-child(even){
+            color: $white;
+        }
+
+        h3:nth-child(odd){
+            display: block;
+            min-width: fit-content;
+            text-align: center;
+            color: $gray-2;
+        }
+    }
+
+    padding: 8px 0;
+}
+
 
 .CTA-button{
 
@@ -165,23 +192,96 @@ img{
     }
 }
 
+.CTA-button-purple{
+
+    background: $gradient-purple;
+    display: inline-flex;
+    align-items: center;
+    width: auto;
+    transition: box-shadow .8s;
+    transition-delay: .1s;
+
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+
+    padding: 16px 32px;
+    border-radius: 8px;
+
+    color: $white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+
+    svg{
+        margin-left: 22px;
+        transition: .5s;
+    }
+
+    &:hover{
+        box-shadow: 0 20px 32px #8139e06c;
+
+        svg:first-child{
+            transform: translateX(6px);
+        }
+        svg:last-child{
+            transform: translateX(8px);
+            transition-delay: .15s;
+        }
+    }
+}
+
 .header{
     margin-bottom: 112px;
     width: 100%;
     padding: 10px 0;
-    background: #160f2059;
-    border-bottom: 2px solid $gray-2;
+    background: #1613093a;
+    border-bottom: 2px solid #2d240c67;
     backdrop-filter: blur(10px);
     svg{
         margin-right: 16px;
     }
     p{
-        color: $gray-4;
+        color: #A69C80;
         font-weight: 600;
         text-transform: uppercase;
         letter-spacing: 3px;
     }
 
+}
+
+.mid_page{
+    position: relative;
+    background-color: $white;
+    color: $gray-1;
+    z-index: 10;
+    p{
+        color: $gray-2;
+    }
+    margin-bottom: 80px;
+    padding-top: 80px;
+    width: 100%;
+
+    .detail{
+        display: block;
+        position: absolute;
+        width: 120%;
+        height: 500px;
+        background-color: $white;
+        top: -100px;
+        left: 0;
+        z-index: -1;
+        transform: rotate(-5deg);
+        transform-origin: center;
+    }
+}
+
+.headline_container{
+    background-image: url(../img/bg_course.webp);
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #headline{
@@ -205,6 +305,8 @@ img{
                 margin-top: 80px;
                 overflow: hidden;
                 border-radius: 24px;
+                z-index: 40;
+                cursor: pointer;
             }
         }
 
@@ -261,6 +363,7 @@ img{
         flex-direction: column;
         h2{
             text-align: center;
+            margin-bottom: 40px;
         }
         .modules-container{
             width: 100%;
@@ -453,6 +556,88 @@ img{
 
 }
 
+.bg_price_course{
+    background-image: url(../img/bg_course.webp);
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#buysection{
+    margin-top: 120px;
+    .container{
+        justify-content: space-between;
+
+        .logo{
+            width: 100%;
+            max-width: 500px;
+            position: relative;
+
+            svg{
+                width: 100%;
+
+                #words{
+                    transform-origin: center;
+                    animation: rotateWords 16s linear infinite;
+                }
+            }
+        }
+
+        .price-card{
+            width: 100%;
+            max-width: 400px;
+
+            padding: 56px 32px;
+
+            background: #1e160671;
+            border: 2px solid #261C08;
+            border-radius: 16px;
+            backdrop-filter: blur(3px);
+
+            text-align: center;
+
+            span:first-child{
+                gap: 8px;
+                margin-bottom: 24px;
+            }
+
+            h3{
+                margin-bottom: 32px;
+            }
+
+            .price{
+                margin: 8px;
+                align-items: flex-end;
+                h1{
+                    &:nth-child(1){
+                        font-family: "Montserrat";
+                        font-weight: bold;
+
+                    }
+
+                    &:nth-child(2){
+                        font-size: 64px;
+                        line-height: 90%;
+                        margin-left: 8px;
+                    }
+                }
+            }
+
+            .CTA-button{
+                margin: 40px 0 16px;
+            }
+            span:last-child{
+                display: block;
+                font-size: 12px;
+                text-transform: capitalize;
+                max-width: 250px;
+                margin: 0 auto;
+                color: #7D7D7D;
+            }
+        }
+    }
+}
+
 #faq{
     .container{
         flex-direction: column;
@@ -526,6 +711,32 @@ img{
     }
 }
 
+#other_courses{
+    background-color: $white;
+    padding: 80px 0;
+    color: $gray-2;
+    .container{
+        flex-wrap: wrap-reverse;
+        gap: 50px;
+        .image{ 
+            max-width: 450px;
+            width: 100%;
+        }
+        .content{
+            max-width: 560px;
+            width: 100%;
+            h2{
+                line-height: 120%;
+            }
+            p{
+                margin: 16px 0 24px;
+                font-size: 20px;
+                color: $gray-2;
+            }
+        }
+    }
+}
+
 .copy{
     margin: 16px 0;
     color: $gray-3;
@@ -557,6 +768,18 @@ img{
                 max-width: 550px;
                 width: 100%;
             }
+        }
+    }
+    #other_courses{
+        .container{
+            text-align: center;
+        }
+    }
+
+    #buysection{
+        .container{
+            flex-direction: column;
+            gap: 120px;
         }
     }
 }
